--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# MySQL ??
+# MySQL
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # DB Source URL
 #spring.datasource.url=jdbc:mysql://localhost:3306?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
@@ -6,4 +6,7 @@
 #spring.datasource.username=root
 # DB password
 #spring.datasource.password=0000
-#dfdfsdfdsf
+
+#thymeleaf \uCC38\uC870 \uACBD\uB85C
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
