[타임리프 적용]헤더, 콘텐츠, 푸터, 사이드바 영역 적용

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,5 @@ spring.datasource.username=root
 spring.datasource.password=0000
 
 #thymeleaf \uCC38\uC870 \uACBD\uB85C
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
+#spring.thymeleaf.prefix=classpath:/templates/
+#spring.thymeleaf.suffix=.html
