[커뮤니티 타임라인 페이지 타임리프 적용] - 커뮤니티 타임라인 페이지 사이드바 추가 및 구조 수정 - h2 설정 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.devtools.livereload.enabled=true
 spring.jpa.show_sql=true
 spring.jpa.properties.hibernate.dialelct=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.url=jdbc:h2:mem:testdb
 
 # MySQL
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -15,5 +15,10 @@ spring.datasource.username=root
 spring.datasource.password=0000
 
 #thymeleaf \uCC38\uC870 \uACBD\uB85C
-#spring.thymeleaf.prefix=classpath:/templates/
-#spring.thymeleaf.suffix=.html
+#\uBC18\uC601\uC2DC true\uB85C \uBCC0\uACBD
+spring.thymeleaf.cache=false 
+#USE Thymeleaf
+spring.thymeleaf.enabled=true
+#Thymeleaf location
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
